# strands-sql

./: README.md  pyproject.toml  setup_template.py
.github/workflows/: ci.yml  publish.yml
src/strands_sql/: __init__.py  models.py  sql_database.py
tests/: test_sql_database.py
