[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strands-sql"
version = "0.1.6"
description = "General-purpose SQL tool for Strands agents — supports PostgreSQL, MySQL, and SQLite."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "Nithin R", email = "nithinr1808@gmail.com" }
]
keywords = ["strands", "agents", "sql", "postgresql", "mysql", "sqlite", "sqlalchemy"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "strands-agents>=0.1.0",
  "sqlalchemy>=2.0",
  "pydantic>=2.0",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]
mysql    = ["pymysql>=1.0"]
dev      = [
  "pytest>=8.0",
  "pytest-asyncio>=0.26",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10",
  "sqlalchemy>=2.0",
]

[project.urls]
Homepage   = "https://github.com/NithiN-1808/strands-sql"
Repository = "https://github.com/NithiN-1808/strands-sql"
Issues     = "https://github.com/NithiN-1808/strands-sql/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/strands_sql"]

[tool.hatch.envs.default]
dependencies = [
  "pytest>=8.0",
  "pytest-asyncio>=0.26",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10",
  "sqlalchemy>=2.0",
]

[tool.hatch.envs.default.scripts]
test      = "pytest {args}"
lint      = "ruff check src tests"
format    = "ruff format src tests"
typecheck = "mypy src"
prepare   = ["format", "lint", "typecheck", "test"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true